remove box shadow from focused buttons to prevent 'blurred' focus aesthetic

--- a/src/webapp/src/scss/bulma-preset-overrides.scss
+++ b/src/webapp/src/scss/bulma-preset-overrides.scss
@@ -5,6 +5,10 @@ OVERRIDES ----------------------------------------------------------------------
 Derived variable overrides
 */
 
+/* Button ------------------ */
+
+$button-focus-box-shadow-size: 0px;
+
 /* Colors ------------------- */
 
 // Brand colors
